--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
+<link
+  rel="stylesheet"
+  href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+/>
 
 <div class="container">
-  <h2 class="my-4">Hot - Click Event</h2>
+  <h2 class="my-4">RXJS - SPecial</h2>
 
   <button id="hello" class="btn btn-primary">Hello!</button>
 </div>
