--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 />
 
 <div class="container">
-  <h2 class="my-4">RXJS - SPecial</h2>
+  <h2 class="my-4">RXJS - Special</h2>
 
-  <button id="hello" class="btn btn-primary">Hello!</button>
+  <!-- button id="hello" class="btn btn-primary">Hello!</button -->
 </div>
